5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1594_2426.log
== TEST (2019-03-19 16:50:49) 
-- CODE:
tempo=(espaco/velocidade)
consumo=(espaco/litros)
espaco=(velocidade/tempo)
distancia=(espaco/tempo)
velocidade=80
espaco=20
tempo=1.00
print(distancia)
print(consumo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempo=(espaco/velocidade)
NameError: name 'espaco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:51:09) 
-- CODE:
consumo=(espaco/litros)
distancia=(espaco/tempo)
velocidade=80
espaco=20
tempo=1.00
print(distancia)
print(consumo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo=(espaco/litros)
NameError: name 'espaco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:52:12) 
-- CODE:
a=consumo
b=distancia
consumo=(espaco/litros)
distancia=(espaco/tempo)
velocidade=80
espaco=20
tempo=1.00
print(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=consumo
NameError: name 'consumo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:18:07) 
-- CODE:
var1=float(input("tempo:"))
var2=float(input("velocidade:"))
D=(var1*var2)
QL=(D/12)
print(D)
print(QL)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 17:18:19) 
-- CODE:
var1=float(input("tempo:"))
var2=float(input("velocidade:"))
D=(var1*var2)
QL=(D/12)
print(D)
print(QL)
-- EXECUTION TIME:
0.19743
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
